k8s-manifests/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - youtube.guled.co.uk
        - grafana.guled.co.uk
        - prometheus.guled.co.uk
      secretName: unified-ingress-tls
  rules:
    - host: youtube.guled.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-clone
                port:
                  number: 80

    - host: grafana.guled.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80

    - host: prometheus.guled.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 80
